# tfws

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  RELEASE-GATES.md  SECURITY.md  SUPPORT.md  pyproject.toml  rust-toolchain.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml
crates/tfws-cli/: Cargo.toml
crates/tfws-cli/src/: main.rs
crates/tfws-core/: Cargo.toml
crates/tfws-core/src/: cbor.rs  cose.rs  lib.rs
crates/tfws-core/tests/: cbor_codec.rs  cose_envelope.rs
crates/tfws-openssl-provider/: Cargo.toml
crates/tfws-openssl-provider/src/: lib.rs
crates/tfws-openssl-provider/tests/: cose_provider.rs
crates/tfws-wasm/: Cargo.toml
crates/tfws-wasm/src/: lib.rs
docs/: IMPLEMENTATION-STATUS.md  QUICKSTART.md
formal/: AgentAuthority.tla  KeyLifecycle.tla  README.md
reference/python/tests/: test_core.py  test_schemas.py  test_transparency_recovery.py
reference/python/tfws3/: __init__.py  canonical.py  cli.py  crypto.py  errors.py  eventlog.py  models.py  netpolicy.py  (+2 more)
registries/: algorithms.json  capabilities.json
schemas/: tfws-event.schema.json  tfws-manifest.schema.json  tfws-signature-bundle.schema.json
scripts/: publish-protected-main.ps1  validate_repository.py
sdks/typescript/: package.json
spec/: AGENT-SAFETY.md  CBOR-COSE.md  LICENSE.md  SECURE-TRANSPORT.md  TFWS-3.0.md  TRANSPARENCY.md
test-vectors/: manifest.invalid-downgrade.json  manifest.valid.json
test-vectors/hybrid-signature-v1/: README.md  tfws.sig.json
(+4 files in other folders)
