[workspace]
resolver = "2"
members = [
  "crates/tfws-core",
  "crates/tfws-openssl-provider",
  "crates/tfws-cli",
  "crates/tfws-wasm",
]

[workspace.package]
version = "3.0.0-alpha.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.86"

[workspace.dependencies]
minicbor = { version = "=2.2.2", default-features = false, features = ["alloc"] }
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_jcs = "0.2"
sha2 = "0.10"
thiserror = "2"
url = "2"
wasm-bindgen = "0.2"
